--- a/.gitignore
+++ b/.gitignore
@@ -6,25 +6,25 @@
 
 ### Java ###
 # Compiled class file
-.class
+*.class
 
 # Log file
-.log
+*.log
 
 # BlueJ files
-.ctxt
+*.ctxt
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp
+*.mtj.tmp
 
 # Package Files #
-.jar
-.war
-.nar
-.ear
-.zip
-.tar.gz
-.rar
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
 # virtual machine crash logs, see httpwww.java.comendownloadhelperror_hotspot.xml
 hs_err_pid
